Fixed Résumé (added the correct e)

--- a/_includes/sidebar.partial.html
+++ b/_includes/sidebar.partial.html
@@ -17,6 +17,6 @@
 			      {% assign class = 'active' %}
 			      {% assign arrow = 'arrow-left' %}
 			    {% endif %}
-          <li class="{{ class }}"><a href="/jon-beebe-resume.html">Resume</a><div class="{{ arrow }}"></div></li>
+          <li class="{{ class }}"><a href="/jon-beebe-resume.html">Résumé</a><div class="{{ arrow }}"></div></li>
 				</ul>
 
