--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			<div>somethingkindawierd@gmail.com</div>
 			<div>
 				<a href="http://www.somethingkindawierd.com/">blog</a> &bull;
-				<a href="/jon-beebe-resume.html">resume</a> &bull;
+				<a href="/jon-beebe-resume.html">résumé</a> &bull;
 				<a href="http://www.beebeography.com">photography</a> &bull;
 				<a href="https://github.com/somethingkindawierd">github</a> &bull;
 				<a href="http://twitter.com/bejonbee">twitter</a></div>
