--- a/css/styles.less
+++ b/css/styles.less
@@ -241,6 +241,8 @@ h1 a, h1 a:active, h1 a:hover { color: rgb(60,60,60); }
 		margin: 0;
 		margin-bottom: 25px;
 
+		h3 { display: none; }
+
 		ul {
 			list-style: none;
 			margin-left: 0;
@@ -402,6 +404,18 @@ px			68		160		 252		344		 436		528		 620		712		 */
 	#right {
 		width: 696px;
 		margin-right: 8px;
+
+		.summary {
+
+			h3 { display: block; }
+
+			li {
+				height: auto;
+				margin: 0 0 1em 0;
+				text-indent: 0;
+			}
+
+		} /* </ .summary > */
 	}
 
 }
@@ -445,6 +459,17 @@ px			68		160		 252		344		 436		*/
 				width: 166px;
 			}
 		}
+		.summary {
+
+			h3 { display: block; }
+
+			li {
+				height: auto;
+				margin: 0 0 1em 0;
+				text-indent: 0;
+			}
+
+		} /* </ .summary > */
 	}
 
 	#left {
@@ -538,6 +563,17 @@ px			68		160		 252		*/
 				width: 181px;
 			}
 		}
+		.summary {
+
+			h3 { display: block; }
+
+			li {
+				height: auto;
+				margin: 0 0 1em 0;
+				text-indent: 0;
+			}
+
+		} /* </ .summary > */
 	}
 
 	#left {
