--- a/css/styles.less
+++ b/css/styles.less
@@ -179,6 +179,7 @@ h1 a, h1 a:active, h1 a:hover { color: rgb(60,60,60); }
 
 	.content {
 		margin: 25px;
+        a, a:active { color: rgb(140, 140, 217); }
 	}
 
 	.corner {
@@ -276,8 +277,8 @@ h1 a, h1 a:active, h1 a:hover { color: rgb(60,60,60); }
 
 } /* </ #right > */
 
-.img { 
-	margin: 5px 0; 
+.img {
+	margin: 5px 0;
 	float: left;
 }
 .img.full {
@@ -340,8 +341,8 @@ h1 a, h1 a:active, h1 a:hover { color: rgb(60,60,60); }
 
 .resume {
 
-	h3 { 
-		width: 100%; 
+	h3 {
+		width: 100%;
 		border-bottom: 1px solid #999;
 		padding: 0 0 0.5em 0;
 		margin: 2em 0 1em 0;
@@ -382,12 +383,12 @@ px			68		160		 252		344		 436		528		 620		712		 */
 	#left {
 		width: 696px;
 		margin-right: 8px;
-	
+
 		ul.nav {
 			margin: 0;
 			padding: 0;
-			text-indent: 0;		
-			margin: 12px 20px;	
+			text-indent: 0;
+			margin: 12px 20px;
 
 			li {
 				float: left;
@@ -442,7 +443,7 @@ px			68		160		 252		344		 436		*/
 	}
 
 	#me {
-		text-align: left; 
+		text-align: left;
 		margin-left: 32px;
 		width: 404px;
 	}
@@ -475,12 +476,12 @@ px			68		160		 252		344		 436		*/
 	#left {
 		width: 436px;
 		margin-right: 8px;
-	
+
 		ul.nav {
 			margin: 0;
 			padding: 0;
-			text-indent: 0;		
-			margin: 12px 20px;	
+			text-indent: 0;
+			margin: 12px 20px;
 
 			li {
 				float: left;
@@ -501,14 +502,14 @@ px			68		160		 252		344		 436		*/
 			width: 100%;
 			margin: 1em 0 0.5em 0;
 		}
-	
+
 		h4, h5 {
 			line-height: 1em;
 			float: left;
 			width: 100%;
 			margin: 0.5em 0;
 		}
-		
+
 		p {
 			width: 100%;
 			margin: 0;
@@ -537,16 +538,16 @@ px			68		160		 252		*/
 		font: 12px/20px Helvetica, sans-serif;
 	}
 
-	h1 { 
+	h1 {
 		font-size: 2em;
 	}
-	
+
 	h2 {
 		font-size: 1.7em;
 	}
 
 	#me {
-		text-align: left; 
+		text-align: left;
 		margin-left: 32px;
 		width: 220px;
 	}
@@ -579,12 +580,12 @@ px			68		160		 252		*/
 	#left {
 		width: 252px;
 		margin-right: 8px;
-	
+
 		ul.nav {
 			margin: 0;
 			padding: 0;
-			text-indent: 0;		
-			margin: 12px 20px;	
+			text-indent: 0;
+			margin: 12px 20px;
 
 			li {
 				float: left;
@@ -605,14 +606,14 @@ px			68		160		 252		*/
 			width: 100%;
 			margin: 1em 0 0.5em 0;
 		}
-	
+
 		h4, h5 {
 			line-height: 1em;
 			float: left;
 			width: 100%;
 			margin: 0.5em 0;
 		}
-		
+
 		p {
 			width: 100%;
 			margin: 0;
@@ -620,3 +621,4 @@ px			68		160		 252		*/
 	}
 
 }
+
