--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 			<h1 title="Most everyone calls me Jon, except my family&hellip;they still call be Jonathan"><a href="/index.html">Jon(athan) Beebe</a></h1>
 			<div>somethingkindawierd@gmail.com</div>
 			<div>
+				<a href="/about-jon-beebe.html">about</a> &bull;
 				<a href="/jon-beebe-resume.html">résumé</a> &bull;
 				<a href="http://www.beebeography.com">photography</a> &bull;
 				<a href="https://github.com/somethingkindawierd">github</a> &bull;
