updated index + urls to links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
 			<h1 title="Most everyone calls me Jon, except my family&hellip;they still call be Jonathan"><a href="/index.html">Jon(athan) Beebe</a></h1>
 			<div>somethingkindawierd@gmail.com</div>
 			<div>
-				<a href="/about-jon-beebe.html">about</a> &bull;
-				<a href="/jon-beebe-resume.html">résumé</a> &bull;
-				<a href="http://www.beebeography.com">photography</a> &bull;
-				<a href="https://github.com/somethingkindawierd">github</a> &bull;
-				<a href="http://twitter.com/bejonbee">twitter</a></div>
+				<a href="/about-jon-beebe.html" title="About Jon Beebe">about</a> &bull;
+				<a href="/jon-beebe-resume.html" title="Jon Beebe's Resume">résumé</a> &bull;
+				<a href="http://www.beebeography.com" title="Jon Beebe's Photo Gallery">photography</a> &bull;
+				<a href="https://github.com/somethingkindawierd" title="Jon Beebe's Code Portfolio">github</a> &bull;
+				<a href="http://twitter.com/bejonbee" title="Jon Beebe on Twitter">twitter</a></div>
 		</div>
 
 		<div id="main">
