--- a/_includes/sidebar.partial.html
+++ b/_includes/sidebar.partial.html
@@ -1,6 +1,7 @@
 		<ul class="nav">
 		  {% for post in site.posts %}
 			{% if post.tags contains 'test' %}
+			{% elsif post.tags contains 'hidden' %}
 			{% else %}
 					{% assign class = 'default' %}
 					{% assign arrow = ' ' %}
