--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,9 @@
 				<a href="/jon-beebe-resume.html" title="Jon Beebe's Resume">résumé</a> &bull;
 				<a href="http://www.beebeography.com" title="Jon Beebe's Photo Gallery">photography</a> &bull;
 				<a href="https://github.com/somethingkindawierd" title="Jon Beebe's Code Portfolio">github</a> &bull;
-				<a href="http://twitter.com/bejonbee" title="Jon Beebe on Twitter">twitter</a></div>
+				<a href="http://twitter.com/bejonbee" title="Jon Beebe on Twitter">twitter</a> &bull;
+				<a href="http://stackoverflow.com/users/123781/somethingkindawierd" title="Jon Beebe on stackoverflow.com">so</a>
+			</div>
 		</div>
 
 		<div id="main">
