--- a/css/styles.less
+++ b/css/styles.less
@@ -77,6 +77,15 @@ ul li, ol li {
 	text-indent: -1em;
 }
 
+hr {
+	float: left;
+	width: 100%;
+	height: 1px;
+	margin: 1em 0;
+	background: #E8E8E8;
+	position: relative;
+}
+
 
 
 body {
