--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -32,5 +32,7 @@
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/assets/vendor/bootstrap/js/bootstrap.js"></script> 
+		
+		{{> google-analytics }}
 	</body>
 </html>
