--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -4,10 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Jon Beebe">
 		
-		<title>Title</title>
+		{{#if page.description }}
+			<meta name="description" content="{{page.description}}">
+		{{/if}}
+
+		
+		{{#if page.title }}
+			<title>{{page.title}}</title>
+		{{/if}}
+
 		<link rel="stylesheet" media="all" href="/assets/vendor/bootstrap/css/bootstrap.css"/>
 		<link rel="stylesheet" media="all" href="/assets/styles/styles.css"/>
 		
