Edit tknuth article, update retina support

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,9 +28,12 @@ archive: true
     <ul id="post-list" class="archive readmore">
         <h3>Read more</h3>
         {% for post in site.posts %}
+          {% if post.draft %}
+          {% else %}
             <li>
-                <a href="{{ post.url }}">{{ post.title }}<aside class="dates">{{ post.date | date:"%b %d" }}</aside></a>
+                <a href="{{ post.url }}">{{ post.title }}<aside class="dates">{{ post.date | date:"%b %d, %Y" }}</aside></a>
             </li>
+            {% endif %}
         {% endfor %}
     </ul>
 {% endif %}
