--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -230,18 +230,18 @@ a[rel="footnote"] {
 .post h1 {
   margin-bottom:2 0px;
   color: #222;
-  font: bold 32px/1.4em "sorts_mill_goudyregular", Helvetica,Arial,sans-serif;
+  font: bold 32px/1.4em $font-serif;
 }
 
 .post h2 {
   margin-bottom: 40px;
-    font: bold 24px/1.5 "sorts_mill_goudyregular",Helvetica,Arial,sans-serif;
+    font: bold 24px/1.5 $font-serif;
     color: #111;
 }
 
 
 .post .post-headline {
-  font: bold 13px/1.5em "sorts_mill_goudyregular",Helvetica,Arial,sans-serif;
+  font: bold 13px/1.5em $font-serif;
   margin: -5px 0 40px 0;
   color: #b2b9be;
     font-size: 13px;
@@ -252,7 +252,7 @@ a[rel="footnote"] {
 }
 
 .post-list-description {
-  font: normal 17px/1.5em "sorts_mill_goudyregular",Helvetica,Arial,sans-serif;
+  font: normal 17px/1.5em $font-serif;
   color: #aaa;
   max-width: 400px;
   margin-top: 2px;
@@ -281,14 +281,14 @@ Post List
 #post-list a {
   color: #333;
   display: block;
-  font: bold 19px/1.7 "sorts_mill_goudyregular",helvetica,Arial,sans-serif;
+  font: bold 19px/1.7 $font-serif;
 }
 
 #post-list .dates {
   float: right;
   position: relative;
   top: 1px;
-  font: normal 17px/1.8 "sorts_mill_goudyregular",helvetica,Arial,sans-serif;
+  font: normal 17px/1.8 $font-serif;
   color: #bbb;
 }
 
@@ -426,7 +426,7 @@ h1.archive {
 
 h2.month {
   width: 100%;
-  font: bold 13px/1 "sorts_mill_goudyregular",helvetica,Arial,sans-serif;
+  font: bold 13px/1 $font-serif;
   text-transform: uppercase;
   margin-top: 40px;
   margin-bottom: 10px;
@@ -440,7 +440,7 @@ h2.month {
 
 #archive-list a {
   display: block;
-  font: bold 17px/1.7 "sorts_mill_goudyregular",helvetica,Arial,sans-serif;
+  font: bold 17px/1.7 $font-serif;
   color: #333;
 }
 
@@ -448,7 +448,7 @@ h2.month {
   float: right;
   position: relative;
   top: 1px;
-  font: normal 17px/1.7 "sorts_mill_goudyregular",helvetica,Arial,sans-serif;
+  font: normal 17px/1.7 $font-serif;
   color: #bbb;
 }
 
@@ -466,14 +466,13 @@ h2.month {
   box-shadow: 0 0 0 3px #fff, 0 0 0 4px #eee;
 }
 
-#post-list.archive.readmore h3{
-
-    font: 400 20px "sorts_mill_goudyregular", Helvetica,Arial,sans-serif;
+#post-list.archive.readmore h3 {
+    font: 400 20px $font-serif;
     margin-bottom: 30px;
 }
 
 #post-list.archive.readmore a{
-  font: 400 16px/1.6 "sorts_mill_goudyregular",helvetica,Arial,sans-serif;
+  font: 400 16px/1.6 $font-serif;
   color: #5694f1;
 }
 
@@ -482,5 +481,5 @@ h2.month {
 }
 
 #post-list.archive.readmore .dates{
-  font: normal 16px/1.6 "sorts_mill_goudyregular",helvetica,Arial,sans-serif;
+  font: normal 16px/1.6 $font-serif;
 }
