--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,11 @@
   <script src="/assets/js/highlight.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <script src="/assets/js/retina.min.js"></script>
+  <script>
+  Retina.configure({
+    force_original_dimensions: false
+  });
+  </script>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
