Typekit and Opentype

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,18 @@
   {% if page.meta-canonical %}
   <link rel="canonical" href="{{ site.baseurl }}{{ page.meta-canonical }}" />
   {% endif %}
+
+  <script src="//use.typekit.net/lik0itr.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
+
+  <style type="text/css">
+  /*
+  .wf-loading body
+  {
+    visibility: hidden;
+  }
+  */
+  </style>
 </head>
 <body>
 
