--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -9,7 +9,7 @@
   font-style: normal;
 }*/
 
-@font-face {
+/*@font-face {
   font-family: 'sorts_mill_goudyitalic';
   src: url('../fonts/GoudyStM-Italic-webfont.eot');
   src: url('../fonts/GoudyStM-Italic-webfont.eot?#iefix') format('embedded-opentype'),
@@ -29,4 +29,4 @@
        url('../fonts/GoudyStM-webfont.svg#sorts_mill_goudyregular') format('svg');
   font-weight: normal;
   font-style: normal;
-}
+}*/
