--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -34,7 +34,7 @@
     font-size: 20px;
     color: #aaa;
     margin-top: 10px;
-    font-family: "sorts_mill_goudyregular", Helvetica, Arial, sans-serif;
+    font-family: $font-serif;
     font-style: normal;
     font-weight: normal;
     margin-top: 10px;
