--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,10 @@
   <link rel="canonical" href="{{ site.baseurl }}{{ page.meta-canonical }}" />
   {% endif %}
 
+<!--
   <script src="//use.typekit.net/lik0itr.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
+-->
 
   <style type="text/css">
   /*
@@ -52,6 +54,8 @@
   });
   </script>
 
+  {% if site.debug == true %}
+  {% else %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,8 +65,6 @@
     ga('create', '{{ site.google_analytics }}', 'auto');
     ga('send', 'pageview');
   </script>
+  {% endif %}
 </body>
 </html>
-
-
-
