--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,32 +1,21 @@
-/*@font-face {
-  font-family: 'icons';
-  src: url('../fonts/icons.eot');
-  src: url('../fonts/icons.eot#iefix') format('embedded-opentype'),
-    url('../fonts/icons.woff') format('woff'),
-    url('../fonts/icons.ttf') format('truetype'),
-    url('../fonts/icons.svg#icons') format('svg');
+@font-face {
+  font-family: 'sorts-mill-goudy';
+  src: url('../fonts/OFLGoudyStM.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OFLGoudyStM.otf')  format('opentype'),
+    url('../fonts/OFLGoudyStM.woff') format('woff'),
+    url('../fonts/OFLGoudyStM.ttf')  format('truetype'),
+    url('../fonts/OFLGoudyStM.svg#OFLGoudyStM') format('svg');
   font-weight: normal;
   font-style: normal;
-}*/
-
-/*@font-face {
-  font-family: 'sorts_mill_goudyitalic';
-  src: url('../fonts/GoudyStM-Italic-webfont.eot');
-  src: url('../fonts/GoudyStM-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/GoudyStM-Italic-webfont.woff') format('woff'),
-       url('../fonts/GoudyStM-Italic-webfont.ttf') format('truetype'),
-       url('../fonts/GoudyStM-Italic-webfont.svg#sorts_mill_goudyitalic') format('svg');
-  font-weight: normal;
-  font-style: italic;
 }
 
 @font-face {
-  font-family: 'sorts_mill_goudyregular';
-  src: url('../fonts/GoudyStM-webfont.eot');
-  src: url('../fonts/GoudyStM-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/GoudyStM-webfont.woff') format('woff'),
-       url('../fonts/GoudyStM-webfont.ttf') format('truetype'),
-       url('../fonts/GoudyStM-webfont.svg#sorts_mill_goudyregular') format('svg');
+  font-family: 'sorts-mill-goudy';
+  src: url('../fonts/OFLGoudyStM-Italic.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OFLGoudyStM-Italic.otf')  format('opentype'),
+    url('../fonts/OFLGoudyStM-Italic.woff') format('woff'),
+    url('../fonts/OFLGoudyStM-Italic.ttf')  format('truetype'),
+    url('../fonts/OFLGoudyStM-Italic.svg#OFLGoudyStM-Italic') format('svg');
   font-weight: normal;
-  font-style: normal;
-}*/
+  font-style: italic;
+}
