--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,21 +1,32 @@
-@font-face {
-  font-family: 'sorts-mill-goudy';
-  src: url('../fonts/OFLGoudyStM.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/OFLGoudyStM.otf')  format('opentype'),
-    url('../fonts/OFLGoudyStM.woff') format('woff'),
-    url('../fonts/OFLGoudyStM.ttf')  format('truetype'),
-    url('../fonts/OFLGoudyStM.svg#OFLGoudyStM') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'sorts-mill-goudy';
+//   src: url('../fonts/OFLGoudyStM.eot?#iefix') format('embedded-opentype'),
+//     url('../fonts/OFLGoudyStM.otf')  format('opentype'),
+//     url('../fonts/OFLGoudyStM.woff') format('woff'),
+//     url('../fonts/OFLGoudyStM.ttf')  format('truetype'),
+//     url('../fonts/OFLGoudyStM.svg#OFLGoudyStM') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'sorts-mill-goudy';
-  src: url('../fonts/OFLGoudyStM-Italic.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/OFLGoudyStM-Italic.otf')  format('opentype'),
-    url('../fonts/OFLGoudyStM-Italic.woff') format('woff'),
-    url('../fonts/OFLGoudyStM-Italic.ttf')  format('truetype'),
-    url('../fonts/OFLGoudyStM-Italic.svg#OFLGoudyStM-Italic') format('svg');
-  font-weight: normal;
-  font-style: italic;
-}
+// @font-face {
+//   font-family: 'sorts-mill-goudy';
+//   src: url('../fonts/SortsMillGoudy-Regular.eot?#iefix') format('embedded-opentype'),
+//     url('../fonts/SortsMillGoudy-Regular.otf')  format('opentype'),
+//     url('../fonts/SortsMillGoudy-Regular.woff') format('woff'),
+//     url('../fonts/SortsMillGoudy-Regular.ttf')  format('truetype'),
+//     url('../fonts/SortsMillGoudy-Regular.svg#SortsMillGoudy-Regular') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
+//
+// @font-face {
+//   font-family: 'sorts-mill-goudy';
+//   src: url('../fonts/OFLGoudyStM-Italic.eot?#iefix') format('embedded-opentype'),
+//     url('../fonts/OFLGoudyStM-Italic.otf')  format('opentype'),
+//     url('../fonts/OFLGoudyStM-Italic.woff') format('woff'),
+//     url('../fonts/OFLGoudyStM-Italic.ttf')  format('truetype'),
+//     url('../fonts/OFLGoudyStM-Italic.svg#OFLGoudyStM-Italic') format('svg');
+//   font-weight: normal;
+//   font-style: italic;
+// }
