--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,6 +1,13 @@
 <ul id="post-list">
     {% for post in paginator.posts %}
       {% if post.draft %}
+		  {% if site.debug %}
+			<li>
+				<a href='{{ post.url }}'><aside class="dates">{{ post.date | date:"%b %d, %Y" }}</aside></a>
+				<a class="post-list-title" href='{{ post.url }}'>{{ post.title }} <h2 class="post-list-description">{{ post.description }}</h2></a>
+			</li>
+		  {% else %}
+		  {% endif %}
       {% else %}
         <li>
             <a href='{{ post.url }}'><aside class="dates">{{ post.date | date:"%b %d, %Y" }}</aside></a>
