--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,68 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
 
-  <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.name }}</title>
-  <link rel="shortcut icon" href="/assets/images/favicon.ico">
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="stylesheet" href="/assets/css/font-awesome.css">
-  <link rel="alternate" type="application/rss+xml" title="My Blog" href="/rss.xml">
-  <link rel="stylesheet" href="/assets/css/tomorrow-night.css">
+  {% include head.html %}
 
-  {% if page.meta-refresh %}
-  <meta http-equiv="refresh" content="0; url={{ site.baseurl }}{{ page.meta-refresh }}">
-  {% endif %}
-  {% if page.meta-canonical %}
-  <link rel="canonical" href="{{ site.baseurl }}{{ page.meta-canonical }}" />
-  {% endif %}
+  <body>
 
-  <script src="//use.typekit.net/lik0itr.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>
+    {% include header.html %}
 
-  <style type="text/css">
-  /*
-  .wf-loading body
-  {
-    visibility: hidden;
-  }
-  */
-  </style>
-</head>
-<body>
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
 
-  {% include navigation.html %}
+    {% include footer.html %}
 
-  {% if page.profile %}
-      {% include profile.html %}
-  {% endif %}
+    {% if site.debug == true %}
+    {% else %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  <section id="wrapper" class="{% if page.profile %}home{% endif %}">
-    {{ content }}
-  </section>
+      ga('create', '{{ site.google_analytics }}', 'auto');
+      ga('send', 'pageview');
+    </script>
+    {% endif %}
+  </body>
 
-  <script src="/assets/js/highlight.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
-  <script src="/assets/js/retina.min.js"></script>
-  <script>
-  Retina.configure({
-    force_original_dimensions: false
-  });
-  </script>
-
-  {% if site.debug == true %}
-  {% else %}
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', '{{ site.google_analytics }}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  {% endif %}
-</body>
 </html>
