Refined typography, content

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -82,7 +82,8 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
+    font-family: "Futura-CondensedExtraBold";
+    font-weight: bold;
 }
 
 
@@ -114,7 +115,6 @@ blockquote {
     border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
     font-size: 18px;
-    letter-spacing: -1px;
     font-style: italic;
 
     > :last-child {
@@ -130,7 +130,8 @@ $code-background: #f8f8f8;
  */
 pre,
 code {
-    font-size: 15px;
+    font-family: Hack, SourceCodePro, Menlo, monospace;
+    font-size: 0.8rem;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: $code-background;
