--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <p class="footer-heading">{{ site.title }}</p>
 
         <ul class="social-media-list">
           {% if site.github_username %}
