--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,9 +14,11 @@
       </a>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+        {% for page in site.pages %}
+					{% if page.main_menu %}
+						{% if page.title %}
+						<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+						{% endif %}
           {% endif %}
         {% endfor %}
         <a class="page-link" href="{{ '/posts.html' | prepend: site.baseurl }}">Archive</a>
