--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -82,7 +82,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Futura-CondensedExtraBold", "HelveticaNeue-CondensedBlack", Helvetica, Arial, sans-serif;
+    font-family: "Futura-CondensedExtraBold", "Futura", "HelveticaNeue-CondensedBlack", Helvetica, Arial, sans-serif;
     font-weight: bold;
 }
 
