--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -98,7 +98,7 @@
  * Site footer
  */
 .site-footer {
-    font-family: "Century Gothic";
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
