--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -22,6 +22,7 @@
       <span>Published <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
       {% if page.author %} • <span itemprop="author">{{ page.author }}</span>{% endif %}
       • <span>Copyright &copy; <span itemprop="copyrightYear">{{ page.date | date: "%Y"}}</span></span>
+      • <span>{{ content | number_of_words }} words</span>
     </p>
   </footer>
   {% include analytics.html %}
